openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment-app
  labels:
    app: payment-app
    app.kubernetes.io/name: payment-app
  annotations:
    haproxy.router.openshift.io/timeout: 60s
    haproxy.router.openshift.io/balance: roundrobin
spec:
  to:
    kind: Service
    name: payment-app
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

# Made with Bob
